syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

message User {
    int64 auth_id = 1;
    string email = 2;
    string fullname = 3;
    string nickname = 4;
    oneof picture {
      string picture_value = 5;
    }
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateRequest{
    string api = 1;
    User user = 2;
}
message CreateResponse{
    string api = 1;
    User user = 2;
}

message ReadRequest{
    string api = 1;
    int64 auth_id = 2;
}
message ReadResponse{
    string api = 1;
    User user = 2;
}

message UpdateRequest{
    string api = 1;
    User user = 2;
}
message UpdateResponse{
    string api = 1;
    User user = 2;
}

message DeleteRequest{
    string api = 1;
    int64 auth_id = 2;
}
message DeleteResponse{
    string api = 1;
    bool is_deleted = 2;
}

message ReadAllRequest{
    string api = 1;
}
message ReadAllResponse{
    string api = 1;
    repeated User users = 2;
}

service UserService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}